--- a/Client/src/components/Landingpage/index.css
+++ b/Client/src/components/Landingpage/index.css
@@ -1,3 +1,30 @@
 .Landingpage {
-    background-image: url('/img/Beerpong.jpg');
+    width: 100%;
+    height: 100%;
+    background: grey url('/img/Beerpong.jpg') center center no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+}
+
+.EntryBox {
+    width: fit-content;
+    height: fit-content;
+    margin-left: 10vw;
+}
+
+.EntryBox > .EntryTitle {
+    font-size: 2rem;
+}
+
+.EntryBox > .RegisterButtons {
+    display: flex;
+    justify-content: center;
+}
+
+.EntryBox button {
+    font-size: 1rem;
+    margin: 5px;
+    height: 3rem;
+    width: 5rem;
 }
