--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -5,6 +5,8 @@
 
 body {
   margin: 0;
+  height: 100vh;
+  width: 100vw;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -13,6 +15,11 @@ body {
 
   background-color: #444;
   color: #FAFAFA;
+}
+
+#root {
+  height: 100vh;
+  width: 100vw;
 }
 
 button {
