--- a/Client/src/components/Landingpage/index.css
+++ b/Client/src/components/Landingpage/index.css
@@ -1,30 +1,42 @@
 .Landingpage {
     width: 100%;
     height: 100%;
-    background: grey url('/img/Beerpong.jpg') center center no-repeat;
-    background-size: cover;
     display: flex;
     align-items: center;
 }
 
+.Landingpage::after {
+    content: "";
+    background:black url('/img/Beerpong.jpg') center center no-repeat;
+    background-size: cover;
+    filter: blur(3px) opacity(30%);
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;   
+  }
+
+
 .EntryBox {
     width: fit-content;
     height: fit-content;
-    margin-left: 10vw;
+    margin: 0vw 10vw 0vw 10vw;
 }
 
 .EntryBox > .EntryTitle {
     font-size: 2rem;
+    line-height: 2rem;
+    margin-bottom: 2rem;
 }
 
 .EntryBox > .RegisterButtons {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .EntryBox button {
     font-size: 1rem;
-    margin: 5px;
-    height: 3rem;
-    width: 5rem;
+    width: 125px;
 }
