First Game structure

--- a/Client/src/components/Main/Home/Play/Play.sass
+++ b/Client/src/components/Main/Home/Play/Play.sass
@@ -1,6 +1,14 @@
+.Play
+  display: flex
+  flex-flow: column
+  justify-content: center
+  align-items: center
+  height: 80vh
+  
 .myCard 
+  width: 100%
+  max-width: 400px
   height: 200px
-  margin: 50px 0 !important
   transition: all 300ms
   box-shadow: 0 3px 5px rgba(0,0,0,0.2)
   background: var(--color-primary) !important
