--- a/Client/src/components/Main/Game/PreGame/Header/Header.sass
+++ b/Client/src/components/Main/Game/PreGame/Header/Header.sass
@@ -1,6 +1,6 @@
 .Header
   height: 75px
-  margin: 0 10px
+  padding: 10px
   border-bottom: 1px solid #3d3d3d
   display: flex
   justify-content: space-between
