Added registration and some routing

--- a/Client/src/components/Main/Home/Play/Play.sass
+++ b/Client/src/components/Main/Home/Play/Play.sass
@@ -12,6 +12,7 @@
   transition: all 300ms
   box-shadow: 0 3px 5px rgba(0,0,0,0.2)
   background: var(--color-primary) !important
+  color: #EEE !important
 
   &:hover
     transform: translateY(-10px)
