--- a/Client/src/components/Login/Login.sass
+++ b/Client/src/components/Login/Login.sass
@@ -1,4 +1,4 @@
-.SignUp
+.Login
   height: 100%
   display: flex !important
   flex-flow: column
@@ -20,7 +20,7 @@
   .submit-container
     margin: 20px
 
-  .login-link
+  .signup-link
     color: #aaa !important
     transition: all 200ms
 
