--- a/Client/src/components/SignUp/SignUp.sass
+++ b/Client/src/components/SignUp/SignUp.sass
@@ -20,10 +20,10 @@
   .submit-container
     margin: 20px
 
-  .login-link
+  .signup-link
     color: #aaa !important
     transition: all 200ms
+    text-decoration: underline
 
     &:hover
       color: #EEE !important
-      text-decoration: underline
