Added logo to signup and login. Position should be changed.

--- a/Client/src/components/Login/Login.sass
+++ b/Client/src/components/Login/Login.sass
@@ -4,11 +4,20 @@
   flex-flow: column
   justify-content: center
   align-items: center
-  text-align: center
+
+  .header 
+    height: 38px
+    width: 100%
+    display: flex
+    justify-content: space-around
+    align-items: center
+    border-bottom: 1px solid black
 
   .form
     width: 90%
     max-width: 400px
+    text-align: center
+
 
   .field
     width: 100%
