--- a/Client/src/components/SignUp/SignUp.sass
+++ b/Client/src/components/SignUp/SignUp.sass
@@ -4,18 +4,28 @@
   flex-flow: column
   justify-content: center
   align-items: center
-  text-align: center
+
+  .header 
+    height: 38px
+    width: 100%
+    display: flex
+    justify-content: space-around
+    align-items: center
+    border-bottom: 1px solid black
+
 
   .form
     width: 90%
     max-width: 400px
+    text-align: center
 
   .field
     width: 100%
-    margin: 50px 0 !important
+    margin: 30px 0 !important
 
   label
     color: white !important
+    text-align: center
 
   .submit-container
     margin: 20px
