--- a/Client/src/components/Landingpage/index.css
+++ b/Client/src/components/Landingpage/index.css
@@ -2,7 +2,9 @@
     width: 100%;
     height: 100%;
     display: flex;
+    flex-flow: column;
     align-items: center;
+    justify-content: space-around;
 }
 
 .Landingpage::after {
@@ -18,11 +20,16 @@
     z-index: -1;   
   }
 
+.Landingpage .Logo {
+    padding: 10px 10px 40px 10px;
+    border-bottom: 1px solid white;
+}
 
 .EntryBox {
     width: fit-content;
     height: fit-content;
-    margin: 0vw 10vw 0vw 10vw;
+    margin: 10vw;
+    margin-bottom: 30vh;
 }
 
 .EntryBox > .EntryTitle {
