--- a/Client/src/components/Login/Login.sass
+++ b/Client/src/components/Login/Login.sass
@@ -2,16 +2,12 @@
   height: 100%
   display: flex !important
   flex-flow: column
-  justify-content: center
+  justify-content: space-around
   align-items: center
 
-  .header 
-    height: 38px
-    width: 100%
-    display: flex
-    justify-content: space-around
-    align-items: center
-    border-bottom: 1px solid black
+  .Logo
+    padding: 10px 10px 40px 10px;
+    border-bottom: 1px solid white;
 
   .form
     width: 90%
