pre-game and in-game stuff

--- a/Client/src/components/Main/Game/PreGame/Lobby/Lobby.sass
+++ b/Client/src/components/Main/Game/PreGame/Lobby/Lobby.sass
@@ -1,5 +1,14 @@
 .Lobby
-  display: flex
+  height: 70vh
+  display: flex !important
+  flex-flow: column
   justify-content: space-between
   align-items: center
-  flex-flow: column
+
+  .divider
+    height: 5px
+    width: 200px
+    background-color: #EEE
+
+  button
+    width: 150px
