--- a/Client/src/components/Main/Game/PreGame/Lobby/Team/Team.sass
+++ b/Client/src/components/Main/Game/PreGame/Lobby/Team/Team.sass
@@ -1,8 +1,12 @@
 .Team
   box-shadow: 0 3px 6px rgba(0,0,0,0.2)
-  width: 200px
-  height: 100px
+  width: 250px
+  height: 130px
   border-radius: 7px
+  transition: all 300ms
+
+  &.active
+    box-shadow: 0 0 10px #EEE
 
   .Player
     display: flex
