--- a/Client/src/components/Main/Settings/index.css
+++ b/Client/src/components/Main/Settings/index.css
@@ -9,7 +9,24 @@
     height: 100%;
 }
 
-.inLine {
+.settingsList {
     display: flex;
+    width: 100%;
+    height: 80vh;
+    flex-flow: column;
+    align-items: center;
+    margin-top: 4rem !important;
+}
+
+.ui.list>.item {
+    padding: 10px !important;
+}
+
+.ui.input {
+    display: table-cell !important;
+}
+
+.inLine {
+    display: flex !important;
     flex-flow: row;
 }
