--- a/Client/src/components/Main/Game/PostGame/PostGame.sass
+++ b/Client/src/components/Main/Game/PostGame/PostGame.sass
@@ -1,2 +1,24 @@
 .PostGame
+  height: 90vh
   color: #EEE !important
+  display: flex !important
+  flex-flow: column
+  align-items: center
+  justify-content: space-evenly
+
+  .field
+    display: flex
+    flex-flow: column
+    align-items: center
+    justify-items: center
+    margin: 50% auto
+    
+  .hidden
+    display: none
+
+  button 
+    margin: 5px
+
+  fix
+    position: absolute
+    margin: 50%
