Added PostGame View Routing

--- a/Client/src/components/Main/Game/PostGame/PostGame.sass
+++ b/Client/src/components/Main/Game/PostGame/PostGame.sass
@@ -16,9 +16,8 @@
   .hidden
     display: none
 
+  .fix
+    position: absolute !important
+
   button 
     margin: 5px
-
-  fix
-    position: absolute
-    margin: 50%
