--- a/Client/src/components/Main/Home/Play/Play.sass
+++ b/Client/src/components/Main/Home/Play/Play.sass
@@ -4,6 +4,10 @@
   justify-content: center
   align-items: center
   height: 70vh
+
+  h1
+    font-size: 1.5rem
+    margin-top: 5px
   
 .myCard 
   width: 100%
@@ -13,6 +17,14 @@
   box-shadow: 0 3px 5px rgba(0,0,0,0.2)
   background: var(--color-primary) !important
   color: #EEE !important
+
+  .iconWrapper 
+    display: flex
+    flex-flow: column
+    align-items: center
+    justify-content: center
+    height: 100%
+  
 
   &:hover
     transform: translateY(-10px)
